istio-service-mesh/deployment.yml
# these four thing are needed for istio service mesh
#Deployment
#Service
#Gateway
#VirtualService
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: nginx
        ports:
        - containerPort: 80
